--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
@@ -21,7 +21,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
-    "framer-motion": "^10.12.18",
-    "react": "^18.2.0"
+    "framer-motion": "^10.12.22",
+    "i": "^0.3.7",
+    "react": "^18.2.0",
+    "react-icons": "^4.7.1"
   }
 }
